--- a/.github/workflows/upload-to-r2.yml
+++ b/.github/workflows/upload-to-r2.yml
@@ -1,5 +1,5 @@
-- name: Upload to R2
-  uses: elementemerald/r2-upload-action@v1.1.2
+name: Upload to R2
+uses: elementemerald/r2-upload-action@v1.1.2
   with:
     r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
     r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
