--- a/.github/workflows/upload-to-r2.yml
+++ b/.github/workflows/upload-to-r2.yml
@@ -1,7 +1,9 @@
-- uses: elementemerald/r2-upload-action@v1.1.2
-    with:
-      r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
-      r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
-      r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-      r2-bucket: ${{ secrets.R2_BUCKET }}
-      source-dir: src
+name: Upload to R2
+run-name: Upload to R2
+uses: elementemerald/r2-upload-action@v1.1.2
+  with:
+    r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+    r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+    r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+    r2-bucket: ${{ secrets.R2_BUCKET }}
+    source-dir: src
