--- a/.github/workflows/upload-to-r2.yml
+++ b/.github/workflows/upload-to-r2.yml
@@ -6,7 +6,5 @@ jobs:
     name: Upload to R2
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: R2 Upload Action
-        uses: actions/r2-upload-action.yml
+        uses: ./actions/r2-upload-action.yml
