--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: Configure rclone
         run: |
+          mkdir -p ~/.config/rclone
           echo "[r2]
           type = s3
           provider = Cloudflare
